# quagua

./: CONTRIBUTING.md  MANIFEST.in  README.md  pyproject.toml
docs/: datasets.md  evaluation.md  installation.md  overview.md  threat_model.md
examples/notebooks/: attack_scenarios.ipynb  examples_encoding_mixing.ipynb  random_walk_encoder_test.ipynb  rigorous_comparison.ipynb  sds.ipynb
quagua/: __init__.py  data_utils.py
quagua/encoders/: README.md  __init__.py  classical_encoders.py  irreversible_encoders.py  pipelines.py  quantum_encoders.py  random_walk_encoder.py
quagua/evaluation/: README.md  __init__.py  framework.py
results/: evaluation_results.json
scripts/: generate_sex_tables.py
tests/: test_smoke.py
